Fix partners was not showing due to cpf missmatching

--- a/app/assets/stylesheets/pages/_key_indicators.scss
+++ b/app/assets/stylesheets/pages/_key_indicators.scss
@@ -95,7 +95,7 @@ div.kir-container {
 
   #risk_key_indicator_report_input_data {
     width: 100%;
-    height: 140px;
+    margin-bottom: 19px;
   }
 }
 
